@@ -24,6 +24,7 @@ Date: 2024-08-09
     - Added chemical plants 2, unlocked at P-TM science.
     - Gave burn-inators an animation.
     - Added lithium-sulfur modular batteries, MK1 and MK2.
+    - Gave a bunch more recipe producitvity.
 
   Changes:
     - Gave glass its own row of recipes, and moved science bottles there.
@@ -74,6 +75,7 @@ Date: 2024-08-09
     - Changed Vanadium-oxide modular batteries to be 2x2.
     - Buffed Modular armor's grid size to 7x7, Power armors to 10x10 and Power armor MK2's to 15x15.
     - Buffed Spidertron's equipmen grid to 14x8.
+    - Changed Polonium reactors neighbour bonus to 25%.
 
   Fixes:
     - Fixed some wood-related recipes not being in the same place.
